--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
-/*	Copyright (c) 2021 marketify
-/*	Author: marketify
+/*	Copyright (c) 2025 AS Maneesha
+/*	Author: Maneesha
 /*	This file is made for CURRENT TEMPLATE
 
 01)	MANEESHA BASE
